--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="header" class="header-parallax">
     <div class="container">
         <nav>
-            <img src="images/logo.png" class="logo">
+            <img src="logo.png" class="logo">
             <ul class="sidemenu">
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -34,7 +34,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="images/imgs-1-removebg-preview (1).png" alt="">
+                <img src="imgs-1-removebg-preview (1).png" alt="">
             </div>
             <div class="about-col-2">
                 <h1 class="sub-tittle">About Me</h1>
