--- a/index.html
+++ b/index.html
@@ -100,16 +100,16 @@
         <h1 class="sub-tittle">My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="images/work1.jpg" alt="">
+                <img src="work1.jpg" alt="">
                 <div class="layer">
                     <h3>Scientific Calculator</h3>
                     <p>The app evaluate any math expressions that you provided.</p>
 
-                    <a href="images/Calculator.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="Calculator.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
-                <img src="images/wok2.jpg" alt="">
+                <img src="wok2.jpg" alt="">
                 <div class="layer">
                     <h3>Online shopping App</h3>
                     <p>The app helps you to buy and sell products online.</p>
