--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <a href="#"><i class="fa-brands fa-linkedin"></i>
                     </a>
                 </div>
-                <a href="images/MyCv.pdf" download class="btn btn2">Download CV</a>
+                <a href="MyCv.pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
             <form  name="submit-to-google-sheet">
