--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
                 <p>priyaranjan039@gmail.com</p>
                 <p>9827734904</p>
                 <div class="social-icon">
-                    <a href="#"><i class="fa-brands fa-facebook"></i>
+                    <a href="https://m.facebook.com/profile.php/?id=100037171402031"><i class="fa-brands fa-facebook"></i>
                     </a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i>
+                    <a href="https://www.instagram.com/priyaranjan477/"><i class="fa-brands fa-instagram"></i>
                     </a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i>
+                    <a href="#https://www.linkedin.com/in/priyaranjan-sahoo-15a86322a/"><i class="fa-brands fa-linkedin"></i>
                     </a>
                 </div>
                 <a href="MyCv.pdf" download class="btn btn2">Download CV</a>
