--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#contact">Contact</a></li>
                 <i class="fa-regular fa-circle-xmark" onclick="closemenu()"></i>
             </ul>
-            <i class="fas fa-bars fs" onclick="openMenu()"></i>
+            <i class="fa-solid fa-bars" onclick="openMenu()"></i>
 
         </nav>
         <div class="header-text">
@@ -185,8 +185,8 @@ function closeMenu() {
     sideMenu.style.right = "-200px";
 }
 
-nav.querySelector(".fas").addEventListener("click", openMenu);
-sideMenu.querySelector(".fa-linkedin").addEventListener("click", closeMenu);
+nav.querySelector(".fa-bars").addEventListener("click", openMenu);
+sideMenu.querySelector(".fa-circle-xmark").addEventListener("click", closeMenu);
  </script >
 <script>
     document.addEventListener("DOMContentLoaded", function () {
