--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                 <li><a href="#services">Service</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <i class="fa-regular fa-circle-xmark" onclick="closemenu()"></i>
+                <i class="fas fa-times" onclick="closeMenu()"></i>
+
             </ul>
             <i class="fa-solid fa-bars" onclick="openMenu()"></i>
 
@@ -185,7 +186,7 @@ function closeMenu() {
     sideMenu.style.right = "-200px";
 }
 
-nav.querySelector(".fa-bars").addEventListener("click", openMenu);
+nav.querySelector(".fas").addEventListener("click", openMenu);
 sideMenu.querySelector(".fa-circle-xmark").addEventListener("click", closeMenu);
  </script >
 <script>
