--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@ function closeMenu() {
     sideMenu.style.right = "-200px";
 }
 
-nav.querySelector(".fas").addEventListener("click", openMenu);
-sideMenu.querySelector(".fa-circle-xmark").addEventListener("click", closeMenu);
+nav.querySelector(".fa-bars").addEventListener("click", openMenu);
+sideMenu.querySelector(".fas").addEventListener("click", closeMenu);
  </script >
 <script>
     document.addEventListener("DOMContentLoaded", function () {
