--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#services">Service</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <i class="fa-times" onclick="closeMenu()"></i>
+              <i class="fa-solid fa-circle-xmark"></i>
 
             </ul>
             <i class="fa-solid fa-bars fas" onclick="openMenu()"></i>
@@ -137,7 +137,7 @@
                     </a>
                     <a href="https://www.instagram.com/priyaranjan477/"><i class="fa-brands fa-instagram"></i>
                     </a>
-                    <a href="#https://www.linkedin.com/in/priyaranjan-sahoo-15a86322a/"><i class="fa-brands fa-linkedin"></i>
+                    <a href="https://www.linkedin.com/in/priyaranjan-sahoo-15a86322a/"><i class="fa-brands fa-linkedin"></i>
                     </a>
                 </div>
                 <a href="MyCv.pdf" download class="btn btn2">Download CV</a>
@@ -187,7 +187,7 @@ function closeMenu() {
 }
 
 nav.querySelector(".fas").addEventListener("click", openMenu);
-sideMenu.querySelector(".fa-times").addEventListener("click", closeMenu);
+sideMenu.querySelector(".fa-solid").addEventListener("click", closeMenu);
  </script >
 <script>
     document.addEventListener("DOMContentLoaded", function () {
