--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ function closeMenu() {
 }
 
 nav.querySelector(".fas").addEventListener("click", openMenu);
-sideMenu.querySelector(".fa-solid").addEventListener("click", closeMenu);
+sideMenu.querySelector(".fa-circle-xmark").addEventListener("click", closeMenu);
  </script >
 <script>
     document.addEventListener("DOMContentLoaded", function () {
