--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <div class="about-col-2">
                 <h1 class="sub-tittle">About Me</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, expedita fuga suscipit qui sed commodi aperiam similique. Distinctio quo cupiditate eveniet laudantium ipsa dolorem aspernatur sit, consequatur labore deserunt corporis?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum consequatur nostrum earum numquam voluptatibus at delectus accusamus repudiandae voluptatem vel nobis laboriosam, incidunt quae? Illo quo perspiciatis dicta id dolor.
-                </p>
+                    Welcome to my corner of the internet. I am currently pursuing a Bachelor's degree in Computer Science and Engineering at SOA University, where my passion for technology and problem-solving takes center stage. With a keen interest in mathematics, I find joy in unraveling complex algorithms and turning them into elegant solutions.
+               </p>
                 <div class="tab-tittle" >
                     <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                     <p class="tab-links" onclick="opentab('experience')">Experience</p>
