--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
             <div>
                 <i class="fa-solid fa-code"></i>
                 <h2>Web Design</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus sapiente vero optio animi quasi dicta facilis ipsa deserunt veniam. Delectus architecto excepturi distinctio eligendi praesentium sunt velit! Cum, sequi iure.</p>
+                <p>In the virtual atelier, I conjure up visually stunning and user-centric websites using the enchanting trio of HTML, CSS, and JavaScript. Each line of code is a brushstroke, and the canvas is the vast expanse of the internet. From weather forecast platforms to various other web wonders, I've crafted digital experiences that leave a lasting impression.</p>
                 <a href="#">Learn more</a>
             </div>
             <div>
                 <i class="fa-brands fa-app-store"></i>
                 <h2>App Design</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus sapiente vero optio animi quasi dicta facilis ipsa deserunt veniam. Delectus architecto excepturi distinctio eligendi praesentium sunt velit! Cum, sequi iure.</p>
+                <p>My journey into the digital landscape extends beyond web design. I've delved into the world of mobile app development, sculpting ideas into functional and engaging Android applications using the powerful Android Studio. The seamless fusion of design and functionality is the hallmark of my apps.</p>
                 <a href="#">Learn more</a>
             </div>
            
