--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-tittle">Contact Me</h1>
-                <i class="fa-brands fa-telegram"></i>
-                <p>priyaranjan039@gmail.com</p>
-                <i class="fa-solid fa-phone"></i>
-                <p>9827734904</p>
+                
+                <p><i class="fa-brands fa-telegram"></i>priyaranjan039@gmail.com</p>
+               
+                <p> <i class="fa-solid fa-phone"></i>9827734904</p>
                 <div class="social-icon">
                     <a href="https://m.facebook.com/profile.php/?id=100037171402031"><i class="fa-brands fa-facebook"></i>
                     </a>
