--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
            
         </div>
-        <a href="#" class="btn">See more</a>
+        <a href="movie.html" class="btn">See more</a>
     </div>
 </div>
 <!-- ------------------------contact------------------------------------ -->
