--- a/movie.html
+++ b/movie.html
@@ -55,11 +55,16 @@
 </div>
 <div class="movie">
     <img src="https://th.bing.com/th/id/OIP.88G3_UmmoLq_Djf6DgWvugHaLH?rs=1&pid=ImgDetMain" alt="Movie 2">
-    <h3><a href="https://drive.google.com/file/d/1Bo2ty7YcnxVWtB5UgADR7zy_Pc7C9syJ/view?usp=sharing" download >
+    <h3><a href="https://drive.google.com/uc?export=download&id=1Bo2ty7YcnxVWtB5UgADR7zy_Pc7C9syJ" download >
         R.I.P.D.: Rest in Peace Department</a></h3>
 <!-- <p>Description of Movie 2.</p> -->
 </div>
-        <!-- Add more movie sections as needed -->
+<div class="movie">
+    <img src="https://upload.wikimedia.org/wikipedia/en/7/75/Leo_%282023_Indian_film%29.jpg" alt="Movie 2">
+    <h3><a href="https://drive.google.com/uc?export=download&id=1LNV3gxwTAwVNbUghSCc6Hvm7-xs5Syis" download >
+        LEO</a></h3>
+<!-- <p>Description of Movie 2.</p> -->
+</div>
     </section>
 </main>
 
