--- a/movie.html
+++ b/movie.html
@@ -39,7 +39,7 @@
         </div>
         <div class="movie">
             <img src="https://assets.gadgets360cdn.com/pricee/assets/product/202305/kerala-story_1683018677.JPG" alt="Movie 2">
-            <h3><a href="https://drive.google.com/file/d/15ovQ2JkiY_D7v4xgve0vurQp5ET7ZLAH/view?usp=sharing" download >The Kerala Story</a></h3>
+            <h3><a href="https://drive.google.com/uc?export=download&id=15ovQ2JkiY_D7v4xgve0vurQp5ET7ZLAH" download >The Kerala Story</a></h3>
         <!-- <p>Description of Movie 2.</p> -->
     </div>
     <div class="movie">
