--- a/movie.html
+++ b/movie.html
@@ -61,7 +61,7 @@
 </div>
 <div class="movie">
     <img src="https://upload.wikimedia.org/wikipedia/en/7/75/Leo_%282023_Indian_film%29.jpg" alt="Movie 2">
-    <h3><a href="https://drive.google.com/uc?export=download&id=1LNV3gxwTAwVNbUghSCc6Hvm7-xs5Syis" download >
+    <h3><a href="https://drive.google.com/uc?export=download&id=1LNV3gxwTAwVNbUghSCc6Hvm7-xs5Syis&confirm=yTib" download >
         LEO</a></h3>
 <!-- <p>Description of Movie 2.</p> -->
 </div>
