--- a/movie.html
+++ b/movie.html
@@ -38,8 +38,8 @@
             <!-- <p>Description of Movie 2.</p> -->
         </div>
         <div class="movie">
-            <img src="https://assets.gadgets360cdn.com/pricee/assets/product/202305/kerala-story_1683018677.JPG" alt="Movie 2">
-            <h3><a href="https://drive.google.com/uc?export=download&id=15ovQ2JkiY_D7v4xgve0vurQp5ET7ZLAH" download >The Kerala Story</a></h3>
+            <img src="https://m.media-amazon.com/images/M/MV5BZDY0YzI0OTctYjVhYy00MTVhLWE0NTgtYTRmYTBmOTE3YTViXkEyXkFqcGdeQXVyMTUzMTg2ODkz._V1_.jpg" alt="Movie 2">
+            <h3><a href="https://drive.google.com/uc?export=download&id=1cPU0PspIxsrq9Qj4S1yzuGiujVker9ar" download >Kung Fu Panda 4</a></h3>
         <!-- <p>Description of Movie 2.</p> -->
     </div>
     <div class="movie">
