--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="header" class="header-parallax">
     <div class="container">
         <nav>
-            <img src="logo67.png" class="logo">
+            <img src="logo67.jpeg" class="logo">
             <ul class="sidemenu">
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
