--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <a href="https://www.linkedin.com/in/priyaranjan-sahoo-15a86322a/"><i class="fa-brands fa-linkedin"></i>
                     </a>
                 </div>
-                <a href="MyCv.pdf" download class="btn btn2">Download CV</a>
+                <a href="Priyaranjan_Resume.pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
             <form  name="submit-to-google-sheet">
