--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="x-icon" herf="silu.jpeg">
+    <link rel="icon" type="image/x-icon" href="silu.jpeg">
     <title>Personal Portfolio website</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/7ee71c231d.js" crossorigin="anonymous"></script>
