--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         </nav>
         <div class="header-text">
-            <p>Web Designer</p>
+            <p>Software Devloper</p>
             <h1>Hi, I'm <span>Priyaranjan </span><br>From Odisha</h1>
         </div>
     </div>
