--- a/movie.html
+++ b/movie.html
@@ -7,7 +7,168 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<style>
 
+    /* General Styles */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    line-height: 1.6;
+}
+
+.container {
+    width: 90%;
+    max-width: 1200px;
+    margin: auto;
+}
+
+header {
+    background: #333;
+    color: #fff;
+    padding: 10px 0;
+}
+
+header h1 {
+    margin: 0;
+    text-align: center;
+}
+
+header nav {
+    position: relative;
+}
+
+header ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+header ul li {
+    display: inline;
+}
+
+header ul li a {
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 20px;
+    display: block;
+}
+
+header ul li a:hover {
+    background: #444;
+}
+
+/* Mobile Menu */
+.sidemenu {
+    position: fixed;
+    top: 0;
+    right: -200px;
+    background: #333;
+    width: 200px;
+    height: 100%;
+    padding: 20px;
+    box-shadow: -2px 0 5px rgba(0,0,0,0.5);
+    transition: 0.3s;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.sidemenu i {
+    align-self: flex-end;
+    cursor: pointer;
+    color: #fff;
+}
+
+.fas {
+    display: none;
+    cursor: pointer;
+    color: #fff;
+    font-size: 24px;
+}
+
+/* Main Section */
+main {
+    padding: 20px 0;
+}
+
+.movie-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+}
+
+.movie {
+    background: #f4f4f4;
+    padding: 10px;
+    text-align: center;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+
+.movie img {
+    max-width: 100%;
+    border-radius: 8px;
+}
+
+.movie h3 {
+    margin: 10px 0 0;
+    font-size: 18px;
+}
+
+.movie h3 a {
+    text-decoration: none;
+    color: #333;
+}
+
+.movie h3 a:hover {
+    color: #007BFF;
+}
+
+/* Footer */
+footer {
+    background: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    header ul {
+        display: none;
+    }
+
+    .fas {
+        display: block;
+        position: absolute;
+        top: 15px;
+        right: 20px;
+    }
+
+    #search-bar {
+        width: 100%;
+    }
+}
+
+@media (max-width: 480px) {
+    h1 {
+        font-size: 20px;
+    }
+
+    .movie h3 {
+        font-size: 16px;
+    }
+
+    .movie img {
+        height: auto;
+    }
+}
+</style>
 <header>
     <div class="container">
         <h1>Movies</h1>
