--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <h3>Online shopping App</h3>
                     <p>The app helps you to buy and sell products online.</p>
 
-                    <a href="ecommerce-app.koyeb.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://ecommerce-app.koyeb.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
            
