--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <h3>Scientific Calculator</h3>
                     <p>The app evaluate any math expressions that you provided.</p>
 
-                    <a href="Calculator.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="Calculators.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
