--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
             <div class="work">
                 <img src="work1.jpg" alt="">
                 <div class="layer">
-                    <h3>Scientific Calculator</h3>
-                    <p>The app evaluate any math expressions that you provided.</p>
+                    <h3>Spark Calculator</h3>
+                    <p>The app evaluate any resource allocation that you provided.</p>
 
                     <a href="Calculators.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
